Fix: display on mobile

--- a/style.css
+++ b/style.css
@@ -1,23 +1,32 @@
+body, header {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+    justify-content: center;
+}
+
 body {
       background-color: #e6d8e7;
-      display: flex;
-      flex-direction: column;
       height: 90vh;
-      align-items: center;
-      justify-content: center;
       font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-    font-style: italic;
+h3 {
+    margin: 0;
 }
 
 .logo {
     margin: 0 0.5em;
-    padding: 0.3em;
+    padding: 0.3em 0.7em;
     border: none;
     border-radius: 15px;
     background-color: white;
+    font-style: italic;
+}
+
+img {
+    max-width: 90vw;
 }
 
 .red {
@@ -30,4 +39,9 @@ h1 {
 
 .yellow {
     color: #ffdf00;
+}
+
+p {
+    font-weight: 900;
+    font-size: 0.8em;
 }
